# vertices-x-cube

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Release_Notes.html
Documentation/: X-CUBE-IOTA1.chm
Projects/: Release_Notes.html
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/: README.md
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/EWARM/: IOTA-Client.ewd  IOTA-Client.ewp
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Inc/: main.h  mbedtls_entropy.h
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Inc/Tests/: test.h  test_config.h
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Inc/Wallet/: console.h  iota_conf.h  iota_wallet.h  menu.h  serial_comm.h  terminal_manager.h
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/MDK-ARM/: Project.uvoptx  Project.uvprojx
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/: .cproject  .project  IOTA-Client.launch
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/: IOTA-Client.map  makefile  objects.list  objects.mk  sources.mk
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/Startup/: startup_stm32l4s5aiix.d  subdir.mk
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/Tests/: subdir.mk  test_crypto.d  test_crypto.su  test_find_message.d  test_find_message.su  test_get_balance.d  test_get_balance.su  test_get_message.d  test_get_message.su  test_get_output.d  test_get_output.su  test_get_tips.d  test_get_tips.su  test_info.d  test_info.su  test_message_builder.d  test_message_builder.su  test_outputs_from_address.d  test_outputs_from_address.su  test_response_error.d  test_response_error.su  test_send_message.d  test_send_message.su
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/Time/: STM32CubeRTCInterface.d  STM32CubeRTCInterface.su  subdir.mk  timedate.d  timedate.su  timingSystem.d  timingSystem.su
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/User/: flash_l4.d  flash_l4.su  main.d  main.su  mbedtls_entropy.d  mbedtls_entropy.su  net_conf.d  net_conf.su  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  syscalls.su  sysmem.su  vl53l0x_platform.d  vl53l0x_platform.su  vl53l0x_proximity.d  vl53l0x_proximity.su
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/Utils/: cloud.d  cloud.su  iot_flash_config.d  iot_flash_config.su  sensors_data.d  sensors_data.su  set_credentials.d  set_credentials.su  subdir.mk
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Application/Wallet/: console.d  console.su  iota_wallet.d  iota_wallet.su  menu.d  menu.su  send_indexation_msg.d  send_indexation_msg.su  sensor_indexation_msg.d  sensor_indexation_msg.su  serial_comm.d  serial_comm.su  subdir.mk  terminal_manager.d  terminal_manager.su  test_wallet.d  test_wallet.su  wallet_get_balance.d  wallet_get_balance.su  wallet_send_tx.d  wallet_send_tx.su
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Drivers/BSP/B-L4S5I-IOT01A/: stm32l475e_iot01.d  stm32l475e_iot01.su  stm32l475e_iot01_bus.d  stm32l475e_iot01_bus.su  stm32l475e_iot01_env_sensors.d  stm32l475e_iot01_env_sensors.su  stm32l475e_iot01_motion_sensors.d  stm32l475e_iot01_motion_sensors.su  subdir.mk
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Drivers/BSP/Components/HTS221/: hts221.d  hts221.su  hts221_reg.d  hts221_reg.su  subdir.mk
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Drivers/CMSIS/: subdir.mk  system_stm32l4xx.d  system_stm32l4xx.su
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/STM32CubeIDE/SODIUM/Drivers/STM32L4xx_HAL_Driver/: stm32l4xx_hal.d  stm32l4xx_hal.su  stm32l4xx_hal_can.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_cortex.su  stm32l4xx_hal_crc.d  stm32l4xx_hal_crc_ex.d  stm32l4xx_hal_cryp.d  stm32l4xx_hal_cryp_ex.d  stm32l4xx_hal_dac.d  stm32l4xx_hal_dac_ex.d  stm32l4xx_hal_dfsdm.d  stm32l4xx_hal_dfsdm_ex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma.su  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_dma_ex.su  stm32l4xx_hal_exti.d  stm32l4xx_hal_exti.su  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash.su  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ex.su  stm32l4xx_hal_gpio.d  stm32l4xx_hal_gpio.su  stm32l4xx_hal_hash.d  stm32l4xx_hal_hash_ex.d  stm32l4xx_hal_i2c.d  stm32l4xx_hal_i2c.su  stm32l4xx_hal_i2c_ex.d  stm32l4xx_hal_i2c_ex.su  stm32l4xx_hal_iwdg.d  stm32l4xx_hal_iwdg.su  stm32l4xx_hal_lptim.d  stm32l4xx_hal_nand.d  stm32l4xx_hal_nor.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr.su  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_pwr_ex.su  (+30 more)
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Src/: main.c
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Src/Tests/: test_crypto.c  test_get_balance.c
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Src/Time/: timingSystem.c
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Src/Utils/: cloud.c  iot_flash_config.c  sensors_data.c
Projects/B-L4S5I-IOT01A/Applications/IOTA-Client/Src/Wallet/: console.c  menu.c  send_indexation_msg.c  sensor_indexation_msg.c  serial_comm.c  terminal_manager.c  wallet_get_balance.c  wallet_send_tx.c
Projects/B-L4S5I-IOT01A/Applications/vertices-client/: .config.cmake.template  CMakeLists.txt  README.md  hardfault.c  http_stm.c  main.c  stm32l4xx_it.c  vertices_client.c
Projects/B-L4S5I-IOT01A/Applications/vertices-client/Time/: STM32CubeRTCInterface.c  timedate.c
Projects/B-L4S5I-IOT01A/Applications/vertices-client/Utils/: cloud.c  credentials.c  iot_flash_config.c  sensors_data.c  set_credentials.c
Projects/B-L4S5I-IOT01A/Applications/vertices-client/include/: hardfault.h  main.h  net_conf.h  vertices_client.h
Projects/B-L4S5I-IOT01A/Applications/vertices-client/include/Time/: timedate.h  timingSystem.h
Projects/B-L4S5I-IOT01A/Applications/vertices-client/include/Utils/: cloud.h  credentials.h  sensors_data.h
utils/debug/: stm32l4s6.cfg  uart_dump.py
utils/env/: Dockerfile  docker_entrypoint.sh  environment.yml
(+45 files in other folders)
